fix(theme): improve dark mode

--- a/src/css/custom-properties.css
+++ b/src/css/custom-properties.css
@@ -41,12 +41,14 @@
 
 .lake-dark {
   /* common */
-  --lake-text-color: #dfdfd6;
-  --lake-secondary-text-color: #9e9e9e;
-  --lake-border-color: #343434;
+  --lake-text-color: #f0f6fc;
+  --lake-secondary-text-color: #9198a1;
+  --lake-border-color: #3d444d;
   --lake-background-color: #1b1b1f;
   --lake-background-hover-color: #343434;
   --lake-background-active-color: #343434;
+  /* selection */
+  --lake-selection-background-color: #184c9d;
   /* link */
   --lake-link-color: #4493f8;
   --lake-link-hover-color: #58a6ff;
@@ -61,4 +63,9 @@
   --lake-popup-border-color: #3d444d;
   --lake-popup-background-color: #252525;
   --lake-popup-shadow: #0000001f 0px 8px 4px, #0000003d 0px 8px 16px;
+  /* button */
+  --lake-button-outline: 2px solid #58a6ff;
+  /* single-line text field */
+  --lake-input-border-hover-color: #58a6ff;
+  --lake-input-outline: 2px solid #58a6ff;
 }
