--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -60,6 +60,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  fill: none;
 }
 .lake-dropdown button.lake-dropdown-title-no-down .lake-dropdown-icon svg,
 .lake-dropdown button.lake-dropdown-title-no-down .lake-dropdown-icon img {
@@ -238,6 +239,7 @@
   width: 16px;
   height: 16px;
   margin: 3px 4px;
+  fill: var(--lake-text-color);
 }
 .lake-color-dropdown-menu li .lake-dropdown-menu-text {
   font-size: 0;
